created html and js, initialized css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Markdown Editor</title>
   </head>
   <body>
-    body
+    <textarea name="input" id="input" rows="40" cols="40"></textarea>
+    <section id="output">
+    </section>
 
     <script type="text/javascript" charset="utf-8" src='app.js'>
     </script>
